# Claude-Writing-Skills

./: .gitignore  .migration-rollback.yaml  .pipeline-state.yaml  01_PRODUCT_ROADMAP.md  02_PHASE1_PRDs.md  03_IMPLEMENTATION_GUIDE.md  04_GAP_ANALYSIS.md  05_AI_COAUTHOR_PLAN.md  06_COAUTHOR_EXECUTION_RUNBOOK.md  07_COAUTHOR_SYSTEM_DESIGN.md  CLAUDE.md  README.md  Story-Inputs.md  Talk-with-Editor.md  pyproject.toml
.claude/: settings.json
YAML-Skills/: 01 — VOICE ANCHOR SKILL  02 — Chapter Promise Skill  03 — Tension Curve Skill  04 — Scene Cards Skill  06 — Character Truth Pass Skill  07 — Dialogue Subtext Pass Skill  11 — Final Polish Skill (Watcher Voice)
agents/: character-specialist.md  continuity-agent.md  depth-partner.md  lead-editor.md  plot-analyst.md  prose-crafter.md
bible/: scene-tracker.md  story-bible.md
canon/: index.md  preferences.md  relationships.yaml  session-state.md  story-arc.md  story-concept.md  timeline.md
cmem-info/: @colbymchenry_cmem - npm.html  cmem-readme.md
docs/: agent_contract.md  architecture_review2_response.md  architecture_review_response.md  citation_enforcement.md  context_continuity_models.md  hierarchical_gap_analysis.md  human_in_the_loop_design.md  implementation_plan.md  matrix_eval_platform.md  mob_protocol.md  phase0_detailed_plan.md  phase1_acceptance_checklist.md  phase1_detailed_plan.md  phase2a_acceptance_checklist.md  phase2a_detailed_plan.md  task.md  walkthrough.md
examples/: bad_comment.yaml  valid_comment.yaml
schemas/: act_outline_input.schema.yaml  agent_comment.schema.yaml  node_input.schema.yaml  (+7 more)
(+92 files in other folders)
